# axialent-test

./: .gitignore  Makefile  README.md  pyproject.toml
data/: communication_style.jsonl  dataset.jsonl  output_df.csv  quantative_df.csv  topics_df.csv
data/inputs/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/outputs/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
docs/: test-assignment.md
notebooks/: 01-data-preparation.ipynb  01-quantative-analysis.ipynb  02-llm-topic-clustering.ipynb  02-qualitative-analysis.ipynb  03-user-communication-analysis.ipynb
src/: data_preparation.py  vector_analysis.py
src/analysis/: clustering.py  communication_style.py  qualitative.py  quantative.py  topic_clustering.py
src/app/: main.py
