[project]
name = "axialent-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Shamil Arslanov",email = "sh.arslanov.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "streamlit (>=1.43.1,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"




[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.43.1"
watchdog = "^6.0.0"
plotly = "^6.0.0"

